add one-to-one relationship between classroom and mentor